--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,34 +24,42 @@
         </activity>
         <activity
             android:name=".presentation.privacyLastSeen.PrivacyLastSeenActivity"
+            android:parentActivityName=".presentation.privacySettingDefaultMessage.PrivacySettingDefaultMessageActivity"
             android:label="@string/app_name" />
 
         <activity
             android:name=".presentation.privacyProfilePhoto.PrivacyProfilePhotoActivity"
+            android:parentActivityName=".presentation.privacySettingDefaultMessage.PrivacySettingDefaultMessageActivity"
             android:label="@string/app_name" />
 
         <activity
             android:name=".presentation.privacyAbout.PrivacyAboutActivity"
+            android:parentActivityName=".presentation.privacySettingDefaultMessage.PrivacySettingDefaultMessageActivity"
             android:label="@string/app_name" />
 
         <activity
             android:name=".presentation.privacyStatus.PrivacyStatusActivity"
+            android:parentActivityName=".presentation.privacySettingDefaultMessage.PrivacySettingDefaultMessageActivity"
             android:label="@string/app_name" />
 
         <activity
             android:name=".presentation.privacySettingDefaultMessage.PrivacySettingDefaultMessageActivity"
+            android:parentActivityName=".presentation.privacySettingDefaultMessage.PrivacySettingDefaultMessageActivity"
             android:label="@string/app_name" />
 
         <activity
             android:name=".presentation.privacyGroup.PrivacyGroupActivity"
+            android:parentActivityName=".presentation.privacySettingDefaultMessage.PrivacySettingDefaultMessageActivity"
             android:label="@string/app_name" />
 
         <activity
             android:name=".presentation.privacyLiveLocation.PrivacyLiveLocationActivity"
+            android:parentActivityName=".presentation.privacySettingDefaultMessage.PrivacySettingDefaultMessageActivity"
             android:label="@string/app_name" />
 
         <activity
             android:name=".presentation.privacyFingerPrint.PrivacyFingerPrintActivity"
+            android:parentActivityName=".presentation.privacySettingDefaultMessage.PrivacySettingDefaultMessageActivity"
             android:label="@string/app_name" />
 
     </application>
