--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
-            android:name=".presentation.setting.SettingActivity" android:theme="@style/DemoTheme"
+            android:name=".presentation.setting.SettingActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -52,7 +52,7 @@
 
         <activity android:name=".presentation.settingRequestAcc.RequestAccountActivity" />
 
-
+        
 
 
     </application>
