Delete my acc setting is done some change is still there

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,7 +52,7 @@
 
         <activity android:name=".presentation.settingRequestAcc.RequestAccountActivity" />
 
-        
+        <activity android:name=".presentation.settingDeleteMyAcc.DeleteMyAccActivity" />
 
 
     </application>
