--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,8 @@
 
         <activity android:name=".presentation.settingDeleteMyAcc.DeleteMyAccActivity" />
 
+        <activity android:name=".presentation.settingChat.SettingChatActivity" />
+
 
     </application>
 
