some function error are still there but the xml are done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,8 @@
 
         <activity android:name=".presentation.settingWallpaper.SettingWallpaperActivity" />
 
+        <activity android:name=".presentation.chatSettingBackup.ChatBackUpActivity" />
+
     </application>
 
 </manifest>
