working on storage and data

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,8 @@
 
         <activity android:name=".presentation.settingNotification.NotificationActivity" />
 
+        <activity android:name=".presentation.storageAndData.StorageAndDataActivity" />
+
     </application>
 
 </manifest>
