working on help setting

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,6 +66,8 @@
 
         <activity android:name=".presentation.storageAndData.StorageAndDataActivity" />
 
+        <activity android:name=".presentation.settingHelp.SettingHelpActivity" />
+
     </application>
 
 </manifest>
