working on help setting completed webviews

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,6 +68,8 @@
 
         <activity android:name=".presentation.settingHelp.SettingHelpActivity" />
 
+        <activity android:name=".presentation.settingContactUs.SettingHelpContactUs" />
+
     </application>
 
 </manifest>
