working on href tag in help setting

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,6 +70,9 @@
 
         <activity android:name=".presentation.settingContactUs.SettingHelpContactUs" />
 
+        <activity android:name=".presentation.helpAppInfo.HelpAppInfoActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+
     </application>
 
 </manifest>
