--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,8 +70,9 @@
 
         <activity android:name=".presentation.settingContactUs.SettingHelpContactUs" />
 
-        <activity android:name=".presentation.helpAppInfo.HelpAppInfoActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+        <activity android:name=".presentation.helpAppInfo.HelpAppInfoActivity" />
+
+        <activity android:name=".presentation.helpPayment.HelpPaymentActivity" />
 
     </application>
 
